# Demo-MCP-server

./: main.py  pyproject.toml
